tests/ui/issues/issue-30589.stderr
error[E0412]: cannot find type `DecoderError` in this scope
  --> $DIR/issue-30589.rs:3:23
   |
LL | impl fmt::Display for DecoderError {
   |                       ^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
